# clio

./: .env.example  README.md
.github/workflows/: ci.yml
apps/mobile/: pubspec.yaml
apps/mobile/lib/: main.dart
apps/mobile/lib/src/: clio_exports.dart
docs/: DEPLOYMENT.md  ROADMAP.md  SECURITY.md
infra/: docker-compose.yml
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/app/: main.py
services/api/app/api/v1/: api.py
services/api/app/api/v1/endpoints/: auth.py  bills.py  cards.py  email_webhook.py  health.py  notifications.py  reminders.py  uploads.py
services/api/app/core/: config.py  rate_limiter.py  request_id.py  security.py
services/api/app/db/: session.py
services/api/app/models/: __init__.py  device_token.py  models.py
services/api/app/schemas/: notifications.py  schemas.py
services/api/app/services/: auth_service.py  fcm_service.py  notification_scheduler.py  storage_service.py
services/api/tests/: conftest.py  test_integration.py  test_parsers.py
services/worker/: Dockerfile  requirements.txt
services/worker/app/: __init__.py  worker.py
services/worker/app/core/: config.py
services/worker/app/db/: session.py
services/worker/app/models/: models.py
services/worker/app/parsers/: __init__.py  base.py  cathay.py  ctbc.py  generic.py  taishin.py
services/worker/app/services/: ocr_service.py  pdf_service.py  storage_service.py
services/worker/app/tasks/: __init__.py  cleanup.py  notifications.py  parse_statement.py
(+25 files in other folders)
